hphp/test/zend/good/Zend/tests/traits/bug60153.php.expectf

Fatal error: Declaration of C::oneArgument() must be compatible with that of IFoo::oneArgument() in %s/bug60153.php on line 11
